@@ -1,3 +1,10 @@
+2008-10-01  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-helpers.c
+	  src/gconf-helpers/gconf-helpers.h
+		- (nm_gconf_get_valuehash_helper, nm_gconf_set_valuehash_helper): no
+			longer used; disable for now
+
 2008-09-29  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dialogs.c
